# meta_hack

./: .dockerignore  Dockerfile  README.md  app.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
Downloads/hackathon/civicai/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
Downloads/hackathon/civicai/pages/: dashboard.jsx  index.jsx  login.jsx  support.jsx
Downloads/hackathon/civicai/pages/api/: alert.js  process.js  status.js  transcribe.js
Downloads/hackathon/civicai/styles/: globals.css
Downloads/hackathon/meta/: .env  .env.example  SETUP.md  inference.py  pyproject.toml  verify_env.py
server/: app.py
