[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-report-structuring-env"
version = "1.0.0"
description = "An OpenEnv environment for structuring messy bug reports using LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SAI-RAHUL-ROKKAM", email = "sairahulrokkam@gmail.com"}
]
keywords = ["openenv", "reinforcement-learning", "llm", "bug-reports"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "requests==2.32.3",
    "openai==1.58.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Repository = "https://github.com/SAI-RAHUL-ROKKAM/meta_hack"
Documentation = "https://huggingface.co/spaces/RAHUL-13/bug-report-structuring-env"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
